[fix] show scrollbar at all times to avoid content jump

--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: "Helvetica";
+  overflow-y: scroll;
   color: #444;
 }
 
